Fix spacing at large screens.
fix spacing of elemements at larger screens

--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,7 @@
         flex-direction: column;
         place-items: center;
         text-align: center;
-        /* border: 1px solid limegreen; */
+        justify-content: space-between;
     }
     
     .flex-container * {
@@ -206,18 +206,8 @@
     @media screen and (min-width: 45em) {
         .flex-container {
             flex-direction: row;
-            justify-content: space-between;
+            /* justify-content: space-between; */
             text-align: left;
-        }
-        
-        .grid-container > *:first-child {
-            grid-column: 2;
-            border: 1px solid red;
-        }
-        
-        .grid-container > *:last-child {
-            grid-column: 3;
-            border: 1px solid yellow;
         }
 
         .flex-container--home {
@@ -226,9 +216,9 @@
         
     }
     
-    @media screen and (max-width: 63rem){
-        .flex-container {
-            padding-inline: ;
+    @media screen and (min-width: 90rem){
+        .flex-container--home {
+            justify-content: space-around;
         }
     }
     
